--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "start": "concurrently -p \"[{name}]\" -n \"ROLLUP,SITE\" -c \"bgBlue.bold,bgMagenta.bold\" \"yarn rollup -c rollup.config.js --watch\" \"yarn serve dist\""
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.0",
-    "@rollup/plugin-typescript": "^3.0.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/react": "^16.9.23",
-    "concurrently": "^5.1.0",
-    "monaco-editor": "^0.19.3",
+    "concurrently": "^7.0.0",
+    "monaco-editor": "^0.32.0",
     "node-fetch": "^2.6.1",
-    "rollup": "^1.31.0",
-    "serve": "^11.3.0",
+    "rollup": "^2.14.0",
+    "serve": "^13.0.2",
     "typescript": "latest"
   },
   "dependencies": {
-    "monaco-vim": "^0.1.7",
-    "tslib": "^1.10.0"
+    "monaco-vim": "^0.2.0",
+    "tslib": "2.3.1"
   }
 }
